# aratinga-theme_govbrds

./: .gitignore  LICENSE  README.md  __init__.py  blocks.py  package.json  pyproject.toml
fixtures/: data.json  settings.json
src/theme_govbrds/: core.py
static/: package.json
static/css/: style.css.map  style.min.css.map  styles.min.css  styles.min.css.map
static/js/: core-init.js  portal_ifrr.js
static/src/css/: styles.scss
static/wagtail/: theme.css  theme.css.map  theme.scss
templates/: 400.html  500.html  base.html  govbrds.html  two_columns.html
templates/aratinga/pages/: article_index_page.html  article_page.html  web_page.html
templates/aratinga/section/: featured_section_block.html  hero_block.html  (+1 more)
templates/articles/: article_authors.html  article_index_page.html  article_page.html  header-article.html
templates/base/: context_nav.html  folder.html  home_page.html  standard_page.html
templates/blocks/: embed_legacy_block.html  url_block.html
templates/cards/: article-listing-card.html  listing-card-without-image.html  listing-card.html  location-card.html  picture-card.html
templates/components/: pagination.html
templates/includes/: breadcrumb.html  footer.html  header.html  nav.html  skiplink.html
templates/locations/: location_page.html  locations_index_page.html
templates/tags/: breadcrumbs.html  sitemap.html  top_menu.html  top_menu_children.html
templates/theme_govbrds/: base copy.html  base.html  govbrds.html
templates/website/: web_page.html
templatetags/: govbrds.py  govbrds_navigation_tags.py  govbrds_tags.py
(+23 files in other folders)
