[project]
name = "aratinga-theme_govbrds"
dynamic = ["version"]
description = "Design System do Governo Federal Brasileiro projetos derivados do Django"
keywords = ["aratinga", "govbrds", "wagtail", "django"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "Voreios", email = "fabio@voreios.com.br"}
]
dependencies = [
  "Django>=5.1"
]

[project.urls]
Source = "https://github.com/roraimae/aratinga-theme_govbrds"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./src/theme_govbrds/__about__.py"